# Local-Earthquake-Detection

./: .gitignore  CLAUDE.md  README.md
.claude/: settings.json
dashboard/: index.html  package.json  playwright.config.ts
dashboard/src/: App.tsx
dashboard/src/components/: AlertCard.tsx  Dashboard.tsx  StatsPanel.tsx
dashboard/tests/e2e/: dashboard.spec.ts
data/: iris_sample.npy  usgs_earthquakes.csv
data-processing/: requirements.txt
data-processing/scripts/: data_loader.py  feature_extraction.py  model_training.py  test_feature_extraction.py
firmware/: platformio.ini
firmware/include/: alert_system.h  config.h  earthquake_detector.h  event_queue.h
firmware/src/: alert_system.cpp  earthquake_detector.cpp  event_queue.cpp  main.cpp
mcp-edge-impulse/: README.md  mcp-config-example.json  pyproject.toml  requirements.txt  server.py
server/: .env.example  jest.config.js  package.json
server/src/: index.ts
server/src/routes/: alert.routes.ts  status.routes.ts
server/src/services/: alert.service.ts  database.service.ts  mqtt.service.ts
server/src/utils/: logger.ts
server/tests/routes/: alert.routes.test.ts
server/tests/services/: alert.service.test.ts  database.service.test.ts
